--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'sito-ffc'
+app = 'futuri-fuori-corso'
 primary_region = 'fra'
 
 [build]
