--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,13 +8,15 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.12",
-    "react": "^19.1.1",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-remove-scroll": "^2.7.1",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
     "swiper": "^11.2.10",
